@@ -109,6 +109,12 @@ var arango = require("org/arangodb").arango;
 var fm = require("org/arangodb/foxx/manager");
 
 ////////////////////////////////////////////////////////////////////////////////
+/// @brief global 'ArangoStatement'
+////////////////////////////////////////////////////////////////////////////////
+
+var ArangoStatement = require("org/arangodb/arango-statement").ArangoStatement;
+
+////////////////////////////////////////////////////////////////////////////////
 /// @brief global 'Buffer'
 ////////////////////////////////////////////////////////////////////////////////
 
